Add empty input checking

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           </li>
         </ul>
         <div class="add-book-dialog__buttons">
-          <button type="reset" class="dialog-add js-dialog-add">Add</button>
+          <button type="submit" class="dialog-add js-dialog-add">Add</button>
           <button type="reset" class="dialog-cancel js-dialog-cancel">Cancel</button>
         </div>
       </form>
